Convert RSS XML to JSON feed format

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     
     <h2>Available Files:</h2>
     <ul class="file-list">
-        <li>📡 <a href="rss_feed.xml">RSS Feed (rss_feed.xml)</a> - The generated RSS feed</li>
+        <li>📡 <a href="rss_feed.json">JSON Feed (rss_feed.json)</a> - The generated JSON feed</li>
         <li>🐍 <a href="rss_telegram.py">Python Script (rss_telegram.py)</a> - Source code</li>
         <li>📋 <a href="requirements.txt">Requirements (requirements.txt)</a> - Python dependencies</li>
     </ul>
     
     <div class="description">
         <h3>About this project:</h3>
-        <p>This project converts Telegram channel messages into an RSS feed format.</p>
-        <p>RSS Feed URL: <code>https://plaszeb.github.io/telegram-rss-feed/rss_feed.xml</code></p>
+        <p>This project converts Telegram channel messages into a JSON feed format.</p>
+        <p>JSON Feed URL: <code>https://plaszeb.github.io/telegram-rss-feed/rss_feed.json</code></p>
     </div>
 </body>
 </html>
