Add download links for .bat files to website

--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
         <li>📋 <a href="requirements.txt">Requirements (requirements.txt)</a> - Python dependencies</li>
     </ul>
     
+    <h2>Helper Scripts:</h2>
+    <ul class="file-list">
+        <li>⚡ <a href="manual_rss_update.bat" download>Manual RSS Update (manual_rss_update.bat)</a> - Run RSS update manually</li>
+        <li>🚀 <a href="git_push_advanced.bat" download>Advanced Git Push (git_push_advanced.bat)</a> - Interactive Git push</li>
+        <li>📤 <a href="git_push.bat" download>Quick Git Push (git_push.bat)</a> - Simple Git push</li>
+        <li>📥 <a href="git_pull.bat" download>Git Pull (git_pull.bat)</a> - Pull updates from GitHub</li>
+    </ul>
+    
     <div class="description">
         <h3>About this project:</h3>
         <p>This project converts Telegram channel messages into a JSON feed format.</p>
         <p>JSON Feed URL: <code>https://plaszeb.github.io/telegram-rss-feed/rss_feed.json</code></p>
+        <p><strong>Note:</strong> Helper scripts (.bat files) can be downloaded and used locally on Windows.</p>
     </div>
 </body>
 </html>
